# convergio-orchestrator

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
crates/convergio-evidence/: Cargo.toml
crates/convergio-evidence/src/: evidence.rs  ext.rs  gates.rs  lib.rs  mcp_defs.rs  preflight.rs  routes.rs  schema.rs  types.rs  workflow.rs  workflow_tests.rs
crates/convergio-orchestrator/: Cargo.toml
crates/convergio-orchestrator/src/: actions.rs  agent_health.rs  agent_health_tests.rs  aggregation_routes.rs  approval.rs  approval_routes.rs  artifact_bundle.rs  artifact_routes.rs  artifacts.rs  audit.rs  auto_continue.rs  auto_thor.rs  bundle_routes.rs  challenger.rs  claim_routes.rs  compensation.rs  compensation_routes.rs  concurrency_gates.rs  evaluation.rs  evaluation_routes.rs  evaluation_tests.rs  evidence_routes.rs  executor.rs  executor_routing.rs  ext.rs  file_conflict_gate.rs  file_locks.rs  file_size_scan.rs  gates.rs  gates_tests.rs  gates_transition_tests.rs  handlers.rs  handlers_cleanup.rs  handlers_delegation.rs  handlers_learning.rs  handlers_learning_metrics.rs  handlers_learning_tests.rs  handlers_notify.rs  handlers_wave.rs  heartbeat_routes.rs  (+65 more)
crates/convergio-orchestrator/tests/: e2e_completion_edge_cases.rs  e2e_evidence_test_pr_gates.rs  e2e_gates_chain.rs  e2e_gates_evidence.rs  e2e_gates_thor.rs  e2e_gates_wave.rs  e2e_lifecycle_gates.rs  e2e_process_flow_lifecycle.rs  e2e_validator_thor_gates.rs  e2e_wave_chain_gates.rs  plan_lifecycle_e2e.rs  plan_task_e2e.rs
crates/convergio-orchestrator/tests/e2e_gate_helpers/: mod.rs
crates/convergio-orchestrator/tests/gates_common/: mod.rs
crates/convergio-orchestrator/tests/helpers/: mod.rs
crates/convergio-orchestrator/tests/lifecycle_helpers/: mod.rs
docs/adr/: 001-extraction.md  002-security-audit-fixes.md  045-plan-state-machine.md
