[workspace]
resolver = "2"
members = ["crates/convergio-orchestrator", "crates/convergio-evidence"]

[workspace.package]
version = "0.1.14"
edition = "2021"
license = "MIT"
repository = "https://github.com/Roberdan/convergio-orchestrator"

[workspace.dependencies]
# SDK dependencies
convergio-types = "0.1"
convergio-db = "0.1"
convergio-telemetry = "0.1"
convergio-ipc = "0.1"
convergio-scaffold = "0.1"
convergio-ceo = "0.1"
# Local workspace members (for circular dep resolution)
convergio-orchestrator = { path = "crates/convergio-orchestrator" }
convergio-evidence = { path = "crates/convergio-evidence" }

# Common deps — pin same versions as SDK for compatibility
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util", "process"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
regex-lite = "0.1"
r2d2 = "0.8"
r2d2_sqlite = "0.25"
