[package]
name = "convergio-evidence"
version = "0.1.0"
edition.workspace = true
license.workspace = true
readme = "../../README.md"
description = "Evidence gate, checklist enforcement, pre-flight validation, workflow automation"

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
convergio-telemetry = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
convergio-orchestrator = { workspace = true }
